# NeuRep_GWOT

./: .gitignore  .gitmodules  README.md  pyproject.toml
nsdcode/: transform_data.py
scripts/: alignment.py  alignment_THINGS.py  alignment_across_roi.py  alignment_behavior.py  alignment_concat_roi.py  alignment_fMRI_allpairs.py  alignment_models.py  alignment_models_concat.py  behavioral_data.py  category_level_fitting.py  check_dimensionality_MDS.py  extract_shared515.py  get_category_mat.py  get_images.py  graph.py  load_files.py  nsd_plot_tsne.py  nsd_prepare_category_labels.py  nsd_prepare_rois_rdms.py  nsd_prepare_rois_rdms_shared515.py  preprocess_labels.py  preprocess_rdms.py  show_enlarged_OT.py  show_result_across_roi.py  sort_RDMs.py  visualize_rois.py
scripts/preprocess/: check_RSA_concat.py  check_behavior_data.py  check_rois.py  compare_with_THINGSdata.py  create_RDMs_models.py  get_category_mat.py  get_images.py  get_images_Allen.py  get_unique_conditions.py  nsd_prepare_category_labels.py  nsd_prepare_rois_rdms.py  nsd_prepare_rois_rdms_shared515.py  nsd_prepare_rois_rdms_shared515_concat.py
src/: category_averaging.py  category_averaging_behavior.py  download_files.py  embedding_model.py  extract_category_from_behavior.py  fitting_betas.py  linear_regression_model.py  load_img.py  train_embedding_models.py  utils.py
