[tool.poetry]
name = "takeda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = ">=3.6.1, <3.8.0"
pandas = "^1.5.0"
scipy = "*"
seaborn = "^0.12.0"
pot = "^0.9.0"
jupyter = "^1.0.0"
#sklearn = "*"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sphinx = "^5.3.0"
pulp = "^2.6.0"
torch = "==1.12.1"
torchvision = "==0.13.1"
torchaudio = "==0.12.1"
tqdm = "^4.64.1"
optuna = "^3.0.5"
pymysql = "^1.0.2"
numpy = "^1.24.2"
joblib = "^1.2.0"
scikit-learn = "^1.2.1"
notebook = "^6.5.2"
plotly = "^5.13.0"
jax = "^0.4.6"
jaxlib = "^0.4.6"
nilearn = "^0.10.0"
cortex = "^0.42.1"
patsy = "^0.5.3"
statsmodels = "^0.13.5"
pytab = "^1.0.4"
h5py = "^3.8.0"
numexpr = "^2.8.4"
cython = "^0.29.34"
tables = "^3.8.0"
nibabel = "^5.1.0"
pycocotools = "^2.0.7"
sqlalchemy-utils = "^0.41.1"
torchmetrics = "^1.2.0"
open-clip-torch = "^2.23.0"
transformers = "^4.35.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"